--- a/nicnbk-ui-angular2/src/app/news/view/news-view.component.html
+++ b/nicnbk-ui-angular2/src/app/news/view/news-view.component.html
@@ -1,43 +1,47 @@
 <div class="container">
-    <div class="row top-buffer" >
-        <div class="col-md-12">
-            <ol class="breadcrumb">
-                <li><a [routerLink]="['/news']">News</a></li>
-                <li class="active">{{newsItem.type}}</li>
-            </ol>
-        </div>
-    </div>
-    <br/>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="form-group">
-                <h4><span class="label label-info" >{{newsItem.type}}</span></h4>
+    <div class="row withpadding" style="position: relative; min-height: 80px;">
+        <div [ngBusy]="busy">
+            <div class="row top-buffer" >
+                <div class="col-md-12">
+                    <ol class="breadcrumb">
+                        <li><a [routerLink]="['/news']">News</a></li>
+                        <li class="active">{{newsItem.type}}</li>
+                    </ol>
+                </div>
+            </div>
+            <br/>
+            <div class="row withpadding">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <h4><span class="label label-info" >{{newsItem.type}}</span></h4>
+                    </div>
+                </div>
+            </div>
+            <div class="row withpadding">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <h3>{{newsItem.header}}</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row withpadding">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <h3><small>{{newsItem.source}}</small></h3>
+                    </div>
+                </div>
+            </div>
+            <p [innerHTML]="newsItem.content"></p>
+            <br/>
+            <div class="row withpadding">
+                <!--<div class="col-md-2 pull-right">-->
+                    <!--<input name="rating_stars" type="number" class="rating"/>-->
+                <!--</div>-->
+                <!--<script>-->
+                    <!--// with plugin options-->
+                    <!--$(".rating").rating({min:1, max:10, step:1, size:'xs', showClear: false, showCaption: false});-->
+                <!--</script>-->
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="form-group">
-                <h3>{{newsItem.header}}</h3>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="form-group">
-                <h3><small>{{newsItem.source}}</small></h3>
-            </div>
-        </div>
-    </div>
-    <p [innerHTML]="newsItem.content"></p>
-    <br/>
-    <div class="row">
-        <!--<div class="col-md-2 pull-right">-->
-            <!--<input name="rating_stars" type="number" class="rating"/>-->
-        <!--</div>-->
-        <!--<script>-->
-            <!--// with plugin options-->
-            <!--$(".rating").rating({min:1, max:10, step:1, size:'xs', showClear: false, showCaption: false});-->
-        <!--</script>-->
     </div>
 </div>
