PE Fund Profile updates

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.firm-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.firm-profile.component.html
@@ -113,49 +113,49 @@
                     <tr>
                         <td class="col-md-1">Peers</td>
                         <td class="col-md-5">
-                            <input style="width: 100%" type="text"/>
+                            <input style="width: 100%" type="text" [(ngModel)]="firm.peers"/>
                         </td>
                     </tr>
                     <tr>
                         <td class="col-md-1">Locations</td>
                         <td class="col-md-5">
-                            <input style="width: 100%" type="text"/>
+                            <input style="width: 100%" type="text" [(ngModel)]="firm.locations"/>
                         </td>
                     </tr>
                     <tr>
                         <td class="col-md-1">Headquarters</td>
                         <td class="col-md-5">
-                            <input style="width: 100%" type="text"/>
+                            <input style="width: 100%" type="text" [(ngModel)]="firm.headquarters"/>
                         </td>
                     </tr>
                     <tr>
                         <td class="col-md-1">Telephone</td>
                         <td class="col-md-3">
-                            <input style="width: 100%" type="text"/>
+                            <input style="width: 100%" type="text" [(ngModel)]="firm.telephone"/>
                         </td>
                     </tr>
                     <tr>
                         <td class="col-md-1">Fax</td>
                         <td class="col-md-3">
-                            <input style="width: 100%" type="text"/>
+                            <input style="width: 100%" type="text" [(ngModel)]="firm.fax"/>
                         </td>
                     </tr>
                     <tr>
                         <td class="col-md-1">Website</td>
                         <td class="col-md-3">
-                            <input style="width: 100%" type="text"/>
+                            <input style="width: 100%" type="text" [(ngModel)]="firm.website"/>
                         </td>
                     </tr>
                     <tr>
                         <td class="col-md-1">Contact person</td>
                         <td class="col-md-3">
-                            <input style="width: 100%" type="text"/>
+                            <input style="width: 100%" type="text" [(ngModel)]="firm.contactPerson"/>
                         </td>
                     </tr>
                     <tr>
                         <td class="col-md-1">Email</td>
                         <td class="col-md-3">
-                            <input style="width: 100%" type="text"/>
+                            <input style="width: 100%" type="text" [(ngModel)]="firm.email"/>
                         </td>
                     </tr>
                 </table>
