--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-report.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-report.component.html
@@ -37,7 +37,7 @@
                     <td style="font-weight: bold">AUM</td>
                     <td>${{firm.aum}} mln</td>
                     <td style="font-weight: bold">Locations</td>
-                    <td>LA, Boston, Hardcoded</td>
+                    <td>{{firm.locations}}</td>
                 </tr>
                 <tr>
                     <td style="font-weight: bold">Firm inception</td>
@@ -45,7 +45,7 @@
                     <td style="font-weight: bold">Inv Team (ops team)</td>
                     <td>{{firm.invTeamSize}} ({{firm.opsTeamSize}})</td>
                     <td style="font-weight: bold">Peers</td>
-                    <td>The Gores Group, Appolo, Hardcoded</td>
+                    <td>{{firm.peers}}</td>
                 </tr>
             </table>
         </div>
