--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-macro-monitor.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-macro-monitor.component.html
@@ -25,6 +25,9 @@
         <li>
             <a data-toggle="tab" href="#china">China</a>
         </li>
+        <li>
+            <a data-toggle="tab" href="#eu">EU</a>
+        </li>
     </ul>
     <div class="tab-content">
         <div id="global" class="tab-pane fade in active">
@@ -71,6 +74,22 @@
             <div class="row">
                 <div class="col-md-12">
                     <div id="line_chart_china">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="eu" class="tab-pane fade">
+            <br/>
+            <div class="row">
+                <div class="col-md-12">
+                    <div id="table_eu">
+                    </div>
+                </div>
+            </div>
+            <br/>
+            <div class="row">
+                <div class="col-md-12">
+                    <div id="line_chart_eu">
                     </div>
                 </div>
             </div>
