PE Fund Profile Update prior production

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -36,10 +36,10 @@
         </li>
     </ul>
     <div class="tab-content withpadding">
-        <div style="position: relative;">
-            <div [ngBusy]="busy">
-        <div id="overview" class="tab-pane fade in active">
 
+        <div id="overview" class="tab-pane fade in active">
+            <div style="position: relative;" class="withpadding">
+                <div [ngBusy]="busy">
                     <br/>
 
                     <!-- LEFT PANEL -->
