--- a/nicnbk-ui-angular2/src/app/pe/view/pe.firm-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.firm-profile.component.html
@@ -177,7 +177,7 @@
                         <div class="col-md-1 pull-right">
                             <button class="btn btn-primary" [disabled]="firm.id == 0 || firm.id == null" (click)="createFund()">ADD</button>
                         </div>
-                        <table class="table-striped">
+                        <table class="table table-hover">
                             <thead>
                             <th>&nbsp;</th>
                             <th>FUND</th>
