Label message changed

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.firm-search.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.firm-search.component.html
@@ -22,9 +22,9 @@
             <div class="col-md-12">
                 <div class="col-md-9">
                     <div class="form-group">
-                        <label for="firmName">Fund or GP</label>
+                        <label for="firmName">Manager name</label>
                         <input type="text" class="form-control" id="firmName" [(ngModel)]="searchParams.name"
-                               placeholder="Enter fund or manager..."
+                               placeholder="Enter manager..."
                         />
                     </div>
                 </div>
