Hedge Fund Manager search added

--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -114,6 +114,7 @@
                     <ul class="dropdown-menu">
                         <!--<li><a [routerLink]="['/hf/dashboard']" >Dashboard</a></li>-->
                         <li><a [routerLink]="['/hf/fundSearch']">Fund Search</a></li>
+                        <li><a [routerLink]="['/hf/managerSearch']">Manager Search</a></li>
                         <!--<li><a [routerLink]="['/hf/fundSelection']">Fund Selection </a></li>-->
                         <!--<li><a [routerLink]="['/hf/portfolio']">Portfolio </a></li>-->
                         <!--<li><a [routerLink]="['/hf/report']">Report </a></li>-->
