--- a/nicnbk-ui-angular2/src/app/hf/view/hf.fund-search.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.fund-search.component.html
@@ -66,12 +66,12 @@
         <ul class="pagination" *ngIf="searchResult?.showPageFrom > 0">
             <li><a *ngIf="searchResult?.showPageFrom > 1" (click)="search(searchResult.showPageFrom - 1)">&laquo;</a></li>
             <li *ngFor="let i of range(searchResult.showPageFrom, searchResult.showPageTo)" [class.active]="i == searchResult.currentPage">
-                <a (click)="search(i - 1)">{{i}}</a>
+                <a (click)="search(i)">{{i}}</a>
             </li>
             <li><a *ngIf="searchResult.showPageTo < searchResult.totalPages" (click)="search(searchResult.showPageTo + 1)">&raquo;</a></li>
         </ul>
     </div>
-    <div style="position: relative">
+    <!--<div style="position: relative">-->
         <table [ngBusy]="busy" class="table table-hover">
         <thead>
         <tr>
@@ -99,12 +99,12 @@
         </tbody>
     </table>
 
-    </div>
+    <!--</div>-->
     <div class="row pull-right">
         <ul class="pagination" *ngIf="searchResult?.showPageFrom > 0">
             <li><a *ngIf="searchResult?.showPageFrom > 1" (click)="search(searchResult.showPageFrom - 1)">&laquo;</a></li>
             <li *ngFor="let i of range(searchResult.showPageFrom, searchResult.showPageTo)" [class.active]="i == searchResult.currentPage">
-                <a (click)="search(i - 1)">{{i}}</a>
+                <a (click)="search(i)">{{i}}</a>
             </li>
             <li><a *ngIf="searchResult.showPageTo < searchResult.totalPages" (click)="search(searchResult.showPageTo + 1)">&raquo;</a></li>
         </ul>
