--- a/nicnbk-ui-angular2/src/app/pe/view/pe.firm-search.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.firm-search.component.html
@@ -67,7 +67,7 @@
                 <ul class="pagination" *ngIf="searchResult?.showPageFrom > 0">
                     <li><a *ngIf="searchResult?.showPageFrom > 1" (click)="search(searchResult.showPageFrom - 1)">&laquo;</a></li>
                     <li *ngFor="let i of range(searchResult.showPageFrom, searchResult.showPageTo)" [class.active]="i == searchResult.currentPage">
-                        <a (click)="search(i)">{{i}}</a>
+                        <a (click)="search(i - 1)">{{i}}</a>
                     </li>
                     <li><a *ngIf="searchResult.showPageTo < searchResult.totalPages" (click)="search(searchResult.showPageTo + 1)">&raquo;</a></li>
                 </ul>
@@ -78,7 +78,8 @@
                     <th>&nbsp;</th>
                     <th>MANAGER</th>
                     <!--<th>FUND</th>-->
-                    <th>STRATEGY</th>
+                    <th>AUM (mln)</th>
+                    <th>FOUNDED YEAR</th>
                     <th>LOCATION</th>
                     <th>UPDATED</th>
                     <th>ACTIONS</th>
@@ -89,14 +90,15 @@
 
                 <tr *ngFor = "let firm of foundEntities">
                     <td width="5%"></td>
-                    <td width="30%"><a [routerLink]="['/pe/firmProfile/', firm.id]">{{firm.firmName}}</a></td>
+                    <td width="15%"><a [routerLink]="['/pe/firmProfile/', firm.id]">{{firm.firmName}}</a></td>
                     <!--<td width="30%">-->
                     <!--&lt;!&ndash;<a [routerLink]="['/hf/managerProfile/', fund.manager.id]">{{fund.manager.name}}</a>&ndash;&gt;-->
                     <!--</td>-->
                     <!--<td width="10%" th:text="${memoItem.meetingDate}"></td>-->
-                    <td width="10%"></td>
-                    <td width="10%"></td>
-                    <td width="10%"></td>
+                    <td width="7%">{{firm.aum}}</td>
+                    <td width="7%">{{firm.foundedYear}}</td>
+                    <td width="15%">{{firm.locations}}</td>
+                    <td width="7%">{{firm.creationDate}}</td>
                     <td width="5%">
                         <!--<a><i class="glyphicon glyphicon-search"></i></a>-->
                         <a><i class="glyphicon glyphicon-file" [routerLink]="['/pe/fundReport/', firm.id]"></i></a>
@@ -110,7 +112,7 @@
                 <ul class="pagination" *ngIf="searchResult?.showPageFrom > 0">
                     <li><a *ngIf="searchResult?.showPageFrom > 1" (click)="search(searchResult.showPageFrom - 1)">&laquo;</a></li>
                     <li *ngFor="let i of range(searchResult.showPageFrom, searchResult.showPageTo)" [class.active]="i == searchResult.currentPage">
-                        <a (click)="search(i)">{{i}}</a>
+                        <a (click)="search(i - 1)">{{i}}</a>
                     </li>
                     <li><a *ngIf="searchResult.showPageTo < searchResult.totalPages" (click)="search(searchResult.showPageTo + 1)">&raquo;</a></li>
                 </ul>
